add supervisord log and the pid file location default
Summary: since we no longer use ktosiek, some of the logging and pid file disappeared so I restored these back

Test Plan: tested in athena

Reviewers: sendy, kandito, sdsdkkk, albertstevelino, kucing_terbang

Differential Revision: https://p.cermati.com/D7150

--- a/templates/supervisord.conf.j2
+++ b/templates/supervisord.conf.j2
@@ -2,6 +2,8 @@
 nodaemon = {{ supervisor_nodaemon }}
 childlogdir = {{ supervisor_log_dir }}
 user = {{ supervisor_user }}
+logfile={{ supervisord_logfile }}
+pidfile={{ supervisord_pidfile }}
 
 {% if supervisor_unix_http_server_enable %}
 [unix_http_server]
