make program template more flexible
Summary: don't use string literal

Test Plan: already tested

Reviewers: sendy, sdsdkkk, kandito, rwijaya

Reviewed By: rwijaya

Differential Revision: https://p.cermati.com/D7482

--- a/templates/program.conf.j2
+++ b/templates/program.conf.j2
@@ -1,5 +1,7 @@
 [program:{{ item.name }}]
 command={{ item.command }}
 {% if item.configuration is defined %}
-{{ item.configuration }}
+{% for k, v in item.configuration.iteritems() %}
+{{k}}={{v}}
+{% endfor %}
 {% endif %}
