fix supervisor include directory path
Summary: fix supervisor include directory path

Test Plan: manual

Reviewers: mroeha

Reviewed By: mroeha

Differential Revision: https://p.cermati.com/D10809

--- a/templates/supervisord.conf.j2
+++ b/templates/supervisord.conf.j2
@@ -23,7 +23,7 @@ serverurl = http://localhost:{{ supervisor_inet_http_server_port }}
 {% endif %}
 
 [include]
-files = {{ supervisor_config_path }}/conf.d/*.conf {{ supervisor_config_path }}/conf.d/group/*.conf
+files = {{ supervisor_config_path }}/conf.d/*.conf {{ supervisor_config_path }}/conf.d/groups/*.conf
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
